# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "amethystmoduleworld",
    "pistonmoduleworld",
    "kiss3dnmoduleworld",
    "ggezmoduleworld",
    "dyonmodule",
    "nphysics3dmodule",
    "gfxmodule",
    "imguimodule"
]

## exclude = ["path1", "path/to/dir2"]