[package]
name = "amethystmoduleworld"
version = "0.1.0"
authors = ["Lightnet <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# cargo run -p amethystmoduleworld
#[dependencies.amethyst-imgui]
#version = "0.3.1"
#features = ["vulkan"]

#https://book.amethyst.rs/stable/pong-tutorial/pong-tutorial-01.html
[dependencies.amethyst]
version = "0.12.0"
#default-features = false
features = ["vulkan"]
