[package]
name = "ggezmoduleworld"
version = "0.1.0"
authors = ["Lightnet <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.0"

gfx_core = "0.9"
gfx_device_gl = "0.16"

imgui = "0.1.0"
imgui-gfx-renderer = "0.1.0"
