[package]
name = "imguimodule"
version = "0.1.0"
authors = ["Lightnet <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.glium]
version = "0.25.1"
#default-features = true

[dependencies]
image = "0.22"
clipboard = "0.5.0"
imgui = "0.2.1"
imgui-glium-renderer = "0.2.0"
imgui-winit-support = "0.2.1"
