[package]
name = "kiss3dnmoduleworld"
version = "0.1.0"
authors = ["Lightnet <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.21"
nalgebra = "0.18.1"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false