[package]
name = "nphysics3dmodule"
version = "0.1.0"
authors = ["Lightnet <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nphysics_testbed3d = "0.6.0"
ncollide3d = "0.20.1"
nphysics3d = "0.12.3"
kiss3d = "0.21.0"
nalgebra = "0.18.1"